# Bottle-Cap-Detection

./: .coverage  .gitignore  Bottle_Cap_Detection.ipynb  README.md  pyproject.toml  requirements.txt
bottle/: pyvenv.cfg
bottle/Scripts/: activate  activate.bat  get_gprof  get_objgraph  undill
bsort/: __init__.py  cli.py  detector.py  detector_onnx.py  train.py  utils.py
configs/: inferance_config.yaml  train_config.yaml
tests/: conftest.py  test_train.py
